[project]
name = "xum"
version = "0.2.0"
description = "Manage Tmux session for selected folders and SSH hosts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libtmux>=0.46.2",
    "typer-slim>=0.16.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "ruff>=0.12.10",
]

[project.scripts]
xum = "xum.main:app"
